--- a/Frontend/expense-tracker/src/index.css
+++ b/Frontend/expense-tracker/src/index.css
@@ -28,3 +28,19 @@
     @apply w-full text-sm text-black bg-slate-100 rounded px-4 py-3 mt-3 border border-slate-200 outline-none flex justify-between gap-3;
   }
 }
+
+.card{
+  @apply bg-white p-6 rounded-2xl shadow-md shadow-gray-100 border border-gray-200 items-center z-10;
+  }
+
+.card-btn{
+  @apply flex items-center gap-3 text-[12px] text-gray-700 py-3 px-5 rounded-lg hover:text-purple-500 hover:bg-purple-50 cursor-pointer bg-gray-50 border border-gray-200/50 ; 
+}
+
+.add-btn{
+  @apply flex items-center gap-1.5 text-xs md:text-sm font-medium text-gray-700 py-3 px-5 rounded-lg hover:text-purple-500 hover:bg-purple-50 cursor-pointer bg-gray-50 border border-gray-200/50 ; 
+}
+
+.add-btn-fill{
+  @apply flex items-center gap-1.5 text-xs md:text-sm font-medium text-white py-3 px-5 rounded-lg hover:text-purple-500 hover:bg-purple-50 cursor-pointer bg-purple-500 border border-gray-200/50 ;
+}
